@@ -4,6 +4,10 @@ amaroK ChangeLog
 
 
 VERSION 1.2-beta3:
+  ADD: Implemented "Append Suggestions" functionality. It means that when
+       enabled, amaroK will append a couple of suggested songs to playlist
+       when you play a track. This produces a continuous playlist, something
+       similar to listening to radio.
   ADD: Implemented "Play Media..." functionality.
   FIX: Playlist-Browser was appending to playlist when clicking "Load".
        Now it replaces the current playlist again, as intended.
